--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,18 @@
 Package: spmat4stata
 Type: Package
-Title: Create Spatial Weight Matrix for Stata(15)
+Title: Create Spatial Weight Matrix for Stata15
 Version: 0.1.0
 Author: Joodler
 Maintainer: Joodler <amistsss@163.com>
-Description: Creating Spatial Weight Matrix for Stata(15).
+Description: Convert spatial weight matrix to the 
+    data format that can be read by Stata15.
+Depends:
+    R (>= 3.4)
+Imports: 
+    dplyr,
+    tidyr,
+    read_r,
+    spdep
 License: MIT
 Encoding: UTF-8
 LazyData: true
