--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,17 +2,26 @@ Package: spmat4stata
 Type: Package
 Title: Create Spatial Weight Matrix for Stata15
 Version: 0.1.0
-Author: Joodler
+Author@R: person("Joodler", "Ju", role = c("aut", "cre",
+                 email = ""amistsss@163.com))
+Author: Joodler Ju [aut, cre]
 Maintainer: Joodler <amistsss@163.com>
 Description: Convert spatial weight matrix to the 
     data format that can be read by Stata15.
 Depends:
     R (>= 3.4)
-Imports: 
-    dplyr,
-    tidyr,
-    read_r,
+Imports:
+    magrittr,
+    dplyr, 
+    tidyr, 
+    readr, 
     spdep
-License: MIT
+Suggests: tidyverse
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Collate: 
+    'data.R'
+    'long2mat.R'
+Roxygen: list(markdown = TRUE, roclets = c("rd", "namespace", "collate"))
+RoxygenNote: 6.1.0
